Figured out the unhiding the paragraph and down arrow w/js quite a while ago...i need to get much better at pushing to github

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Blueprint | Nested Accordian</title>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:400,700">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:400,300,700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -16,8 +16,8 @@
         <ul class="outer-ul">
           <!-- Out cake tootsie roll -->
           <li>
-            <h2 class="outer-button">
-              <span class="fa fa-arrow-right show-right-arrow" aria-hidden="true"></span>
+            <h2 class="arrow-container outer-heading">
+              <span class="fa fa-arrow-right" aria-hidden="true"></span>
               <span class="fa fa-arrow-down hide-down-arrow" aria-hidden="true"></span>
               Oat cake tootsie roll
             </h2>
@@ -45,11 +45,11 @@
 
           <!-- Cream gummi bears -->
           <li>
-            <button class="outer-button">
+            <h2 class="arrow-container outer-heading">
               <span class="fa fa-arrow-right" aria-hidden="true"></span>
               <span class="fa fa-arrow-down hide-down-arrow" aria-hidden="true"></span>
               Cream gummi bears"
-            </button>
+            </h2>
             <div class="hide">
               <p>Baba gonk obi-wan amidala wicket solo luke dagobah thrawn. Leia antilles organa antilles wedge
                 dagobah sebulba. Padmé kessel coruscant calrissian anakin mon. Coruscant moff lars c-3po. Jade
@@ -77,11 +77,11 @@
 
           <!-- Jelly marzipan sugar plum -->
           <li>
-            <button class="outer-button">
+            <h2 class="arrow-container outer-heading">
               <span class="fa fa-arrow-right" aria-hidden="true"></span>
               <span class="fa fa-arrow-down hide-down-arrow" aria-hidden="true"></span>
               Jelly marzipan sugar plum
-            </button>
+            </h2>
             <div class="hide">
               <p>Calrissian darth alderaan leia skywalker fisto. Luuke thrawn organa moff leia yoda. Sidious fisto
                 mon antilles antilles bespin yoda. Cade wampa luke baba mustafar boba lars boba droid. Amidala
@@ -106,11 +106,11 @@
 
           <!-- Danish souffle -->
           <li>
-            <button class="outer-button">
+            <h2 class="arrow-container outer-heading">
               <span class="fa fa-arrow-right" aria-hidden="true"></span>
               <span class="fa fa-arrow-down hide-down-arrow" aria-hidden="true"></span>
               Danish souffl&eacute;
-            </button>
+            </h2>
             <div class="hide">
               <p>Kamino dooku luke palpatine wedge biggs. Boba zabrak fett dooku naboo solo. Maul chewbacca
                 ventress moff utapau wookiee calrissian tatooine skywalker. Bespin darth skywalker sidious mace
@@ -132,11 +132,11 @@
 
           <!-- Jujubes bear claw topping -->
           <li>
-            <button class="outer-button">
+            <h2 class="arrow-container outer-heading">
               <span class="fa fa-arrow-right" aria-hidden="true"></span>
               <span class="fa fa-arrow-down hide-down-arrow" aria-hidden="true"></span>
               Jujubes bear claw topping
-            </button>
+            </h2>
             <div class="hide">
               <p>Moff droid dooku kit skywalker mandalore. Kamino wicket moff grievous anakin biggs coruscant
                 ahsoka. Yoda ackbar maul gamorrean skywalker lobot anakin. Darth zabrak watto anakin fisto moff
