Started working on CSS.  Going to sleep now

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2 class="arrow-container outer-heading">
               <span class="fa fa-arrow-right" aria-hidden="true"></span>
               <span class="fa fa-arrow-down hide-down-arrow" aria-hidden="true"></span>
-              Cream gummi bears"
+              Cream gummi bears
             </h2>
             <div class="hide">
               <p>Baba gonk obi-wan amidala wicket solo luke dagobah thrawn. Leia antilles organa antilles wedge
