tidied up code, commented

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Erik Petersen Week 2 Weekend Project: Nested-Accordian -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,7 +12,17 @@
   </head>
   <body>
     <div class="container">
-      <header></header>
+      <header>
+        <h1>Nested Accordian</h1>
+        <nav>
+          <ul>
+            <li><a href="#"><span class="fa fa-arrow-left" aria-hidden="true"></span></a></li>
+            <li class="arrow-one"><a href="#"><span class="fa fa-arrow-right nav-right-arrow" aria-hidden="true"></span></a></li>
+            <li><a href="#"><span class="fa fa-tint tear-drop" aria-hidden="true"></span></a></li>
+            <li><a href="#"><span class="fa fa-hdd-o" aria-hidden="true"></span></a></li>
+          </ul>
+        </nav>
+      </header>
       <main>
 
         <ul class="outer-ul">
@@ -145,7 +157,7 @@
                 organa boba sidious mandalore ben amidala leia yoda. Darth windu tatooine mothma calrissian organa
                 obi-wan padmé. Hutt han fisto dooku hutt k-3po palpatine hutt gonk.
               </p>
-              <ul>
+              <ul class="inner-ul">
                 <li>
                   <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Faworki jelly pastry</h4>
                 </li>
