Added jQuery link to html, changed cursor to pointer on hover, and got jQuery to display hidden div

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         </ul>
       </main>
     </div> <!-- end class "container" -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
