Well, still cannot get the click on one to close another but added functionality to the inner ul> clear asdljasdflasdf adsf asdf sf sadf sf asf asf asd asdk

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
               <ul class="inner-ul">
                 <li>
                   <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Donut Pastry</h4>
+                    <div class="hide">
+                    <p>What? Right. Now remember, according to my theory you interfered with with your parent's first meeting.
+                      They don't meet, they don't fall in love, they won't get married and they wont have kids. That's why your
+                      older brother's disappeared from that photograph.
+                    </p>
+                    <div>
                 </li>
                 <li>
                   <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Carrot Cake</h4>
