Finished jquery functionality.  Adding additional text in html and the down arrow.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                </p>
               <ul class="inner-ul">
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Donut Pastry</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down" aria-hidden="true"></span>
+                    Donut Pastry
+                  </h4>
                     <div class="hide">
                     <p>What? Right. Now remember, according to my theory you interfered with with your parent's first meeting.
                       They don't meet, they don't fall in love, they won't get married and they wont have kids. That's why your
