Fixed jquery functionality and added the rest of the text to html.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Erik Petersen Week 2 Weekend Project: Nested-Accordian -->
+<!-- Erik Petersen Week 2 Weekend Project: The Revenge of the Nested-Accordian -->
 
 <!DOCTYPE html>
 <html>
@@ -26,12 +26,13 @@
       <main>
 
         <ul class="outer-ul">
-          <!-- Out cake tootsie roll -->
+
+          <!-- Oat cake tootsie roll -->
           <li>
             <h2 class="arrow-container outer-heading">
               <span class="fa fa-arrow-right" aria-hidden="true"></span>
               <span class="fa fa-arrow-down hide-down-arrow" aria-hidden="true"></span>
-              Oat cake tootsie roll
+              Oat Cake Tootsie Roll
             </h2>
             <div class="hide">
               <p>Anakin solo leia darth. K-3po skywalker padmé skywalker skywalker r2-d2. Solo jango skywalker
@@ -45,88 +46,170 @@
                 <li>
                   <h4>
                     <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
-                    <span class="fa fa-arrow-circle-o-down" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
                     Donut Pastry
                   </h4>
                     <div class="hide">
-                    <p>What? Right. Now remember, according to my theory you interfered with with your parent's first meeting.
-                      They don't meet, they don't fall in love, they won't get married and they wont have kids. That's why your
-                      older brother's disappeared from that photograph.
-                    </p>
+                      <p>I'm sure that in 1985, plutonium is available at every corner drug store, but in 1955,
+                         it's a little hard to come by.
+                      </p>
                     <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Carrot Cake</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Chocolate Pie
+                  </h4>
+                    <div class="hide">
+                      <p>Great Scott. Let me see that photograph again of your brother. Just as I thought, this
+                         proves my theory, look at your brother. Erased from existence. Marty, you interacted with anybody
+                         else today, besides me?
+                      </p>
+                    <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Tootsie Roll Marshmallow</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Tootsie Roll Marshmallow
+                  </h4>
+                    <div class="hide">
+                      <p>One point twenty-one gigawatts. One point twenty-one gigawatts. Great Scott.
+                      </p>
+                    <div>
                 </li>
               </ul> <!-- end class "inner-ul" -->
             </div> <!-- end class "hide" -->
           </li> <!-- end outer visible button "Oat cake tootsie roll" -->
 
-          <!-- Cream gummi bears -->
+          <!-- Cream Gummi Bears -->
           <li>
             <h2 class="arrow-container outer-heading">
               <span class="fa fa-arrow-right" aria-hidden="true"></span>
               <span class="fa fa-arrow-down hide-down-arrow" aria-hidden="true"></span>
-              Cream gummi bears
+              Cream Gummi Bears
             </h2>
             <div class="hide">
-              <p>Baba gonk obi-wan amidala wicket solo luke dagobah thrawn. Leia antilles organa antilles wedge
-                dagobah sebulba. Padmé kessel coruscant calrissian anakin mon. Coruscant moff lars c-3po. Jade
-                bothan dooku mon wookiee palpatine. Moff qui-gon luke sith organa droid organa watto chewbacca.
-                Skywalker mace lobot calrissian luuke. Jar skywalker mara binks lando ventress antilles. Endor
-                greedo antilles organa ackbar jinn darth antilles. Antilles r2-d2 wedge ewok yoda ackbar. Yoda
-                lando calrissian fett han owen tatooine ben.
-              </p>
+              <p>Anakin solo leia darth. K-3po skywalker padmé skywalker skywalker r2-d2. Solo jango skywalker
+                 darth ben organa bothan. Moff leia skywalker chewbacca palpatine mon darth sebulba obi-wan.
+                 Yavin mandalore chewbacca fett k-3po. Han tusken raider ventress aayla. Gonk luuke utapau jango.
+                 Anakin gonk naboo ben jinn skywalker ahsoka tatooine. R2-d2 ben fett droid moff organa solo. Luuke
+                 hutt hutt darth yavin. Sidious c-3po coruscant organa antilles calamari cade solo. Skywalker darth
+                 yavin anakin dantooine binks skywalker.
+               </p>
               <ul class="inner-ul">
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Cookie Ice Cream</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Cookie Ice Cream
+                  </h4>
+                    <div class="hide">
+                      <p>What? Right. Now remember, according to my theory you interfered with with your parent's first meeting.
+                        They don't meet, they don't fall in love, they won't get married and they wont have kids. That's why your
+                        older brother's disappeared from that photograph.
+                      </p>
+                    <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Biscuit Chupa Chups Tart</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Biscuit Chupa Chups Tart
+                  </h4>
+                    <div class="hide">
+                      <p>You know Marty, I'm gonna be very sad to see you go. You've really mad a difference in my life, you've
+                         given me something to shoot for.
+                      </p>
+                    <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Chocolate Tart Macaroon</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Chocolate Tart Macaroon
+                  </h4>
+                    <div class="hide">
+                      <p>Things have certainly changed around here. I remember when this was all farmland as far as the eye
+                         could see. Old man Peabody, owned all of this. He had this crazy idea about breeding pine trees.
+                      </p>
+                    <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Lollipop Liquorice</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Lollipop Liquorice
+                  </h4>
+                    <div class="hide">
+                      <p>Einstein has just become the world's first time traveler. I sent him into the future. One minute
+                         into the future to be exact. And at exactly 1:21 a.m. we should cat h up with him and the time machine.
+                      </p>
+                    <div>
                 </li>
               </ul> <!-- end class "inner-ul" -->
             </div> <!-- end class "hide" -->
-          </li> <!-- end outer visible button "Cream gummi bears" -->
+          </li> <!-- end outer visible button "Cream Gummi Bears" -->
 
-          <!-- Jelly marzipan sugar plum -->
+          <!-- Jelly Marzipan Sugar Plum -->
           <li>
             <h2 class="arrow-container outer-heading">
               <span class="fa fa-arrow-right" aria-hidden="true"></span>
               <span class="fa fa-arrow-down hide-down-arrow" aria-hidden="true"></span>
-              Jelly marzipan sugar plum
+              Jelly Marzipan Sugar Plum
             </h2>
             <div class="hide">
-              <p>Calrissian darth alderaan leia skywalker fisto. Luuke thrawn organa moff leia yoda. Sidious fisto
-                mon antilles antilles bespin yoda. Cade wampa luke baba mustafar boba lars boba droid. Amidala
-                qui-gonn palpatine tatooine lando. Jade darth padmé tatooine owen skywalker sidious r2-d2. Sebulba
-                dantooine boba yoda yoda antilles leia sidious. Jango endor hutt darth greedo darth gamorrean ewok
-                boba. Ben solo yoda organa. Dooku fett darth jinn dagobah organa. Moff aayla solo fett mon skywalker
-                grievous padmé greedo.
-              </p>
+              <p>Anakin solo leia darth. K-3po skywalker padmé skywalker skywalker r2-d2. Solo jango skywalker
+                 darth ben organa bothan. Moff leia skywalker chewbacca palpatine mon darth sebulba obi-wan.
+                 Yavin mandalore chewbacca fett k-3po. Han tusken raider ventress aayla. Gonk luuke utapau jango.
+                 Anakin gonk naboo ben jinn skywalker ahsoka tatooine. R2-d2 ben fett droid moff organa solo. Luuke
+                 hutt hutt darth yavin. Sidious c-3po coruscant organa antilles calamari cade solo. Skywalker darth
+                 yavin anakin dantooine binks skywalker.
+               </p>
               <ul class="inner-ul">
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Toffee Souffl&eacute; Chocolate Bar</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Toffee Souffl&eacute; Chocolate Bar
+                  </h4>
+                    <div class="hide">
+                      <p>What? Right. Now remember, according to my theory you interfered with with your parent's first meeting.
+                        They don't meet, they don't fall in love, they won't get married and they wont have kids. That's why your
+                        older brother's disappeared from that photograph.
+                      </p>
+                    <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Subtitle</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Subtitle
+                  </h4>
+                    <div class="hide">
+                      <p>He's fine, and he's completely unaware that anything happened. As far as he's concerned the trip
+                         was instantaneous. That's why Einstein's watch is exactly one minute behind mine.
+                      </p>
+                    <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Pie Wafer Brownie</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Pie Wafer Brownie
+                  </h4>
+                    <div class="hide">
+                      <p>Say, you wanna see the signing of the declaration of independence, or witness the birth or Christ.
+                         Here's a red-letter date in the history of science, November 5, 1955.
+                      </p>
+                    <div>
                 </li>
               </ul> <!-- end class "inner-ul" -->
             </div> <!-- end class "hide" -->
-          </li> <!-- end outer visible button "Jelly marzipan sugar plum" -->
+          </li> <!-- end outer visible button "Jelly Marzipan Sugar Plum" -->
 
-          <!-- Danish souffle -->
+          <!-- Danish Souffle -->
           <li>
             <h2 class="arrow-container outer-heading">
               <span class="fa fa-arrow-right" aria-hidden="true"></span>
@@ -134,23 +217,54 @@
               Danish souffl&eacute;
             </h2>
             <div class="hide">
-              <p>Kamino dooku luke palpatine wedge biggs. Boba zabrak fett dooku naboo solo. Maul chewbacca
-                ventress moff utapau wookiee calrissian tatooine skywalker. Bespin darth skywalker sidious mace
-                biggs. Hutt antilles windu aayla. Luke jango organa jango yavin lars. Palpatine sith hoth moff
-                sidious yavin binks darth darth. Antilles binks skywalker lando wicket kit. Boba hutt yavin ben.
-                Thrawn jade mace jabba chewbacca binks yoda organa. Windu hutt darth c-3po grievous sidious lobot.
-                Cade skywalker han solo.
-              </p>
+              <p>Anakin solo leia darth. K-3po skywalker padmé skywalker skywalker r2-d2. Solo jango skywalker
+                 darth ben organa bothan. Moff leia skywalker chewbacca palpatine mon darth sebulba obi-wan.
+                 Yavin mandalore chewbacca fett k-3po. Han tusken raider ventress aayla. Gonk luuke utapau jango.
+                 Anakin gonk naboo ben jinn skywalker ahsoka tatooine. R2-d2 ben fett droid moff organa solo. Luuke
+                 hutt hutt darth yavin. Sidious c-3po coruscant organa antilles calamari cade solo. Skywalker darth
+                 yavin anakin dantooine binks skywalker.
+               </p>
               <ul class="inner-ul">
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Biscuit bear claw bear claw</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Biscuit Bear Claw Bear Claw
+                  </h4>
+                    <div class="hide">
+                      <p>Damn, where is that kid. Damn. Damn damn. You're late, do you have no concept of time?
+                      </p>
+                    <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Jujubes bear claw topping applecake</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Jujubes Bear Claw Topping Applecake
+                  </h4>
+                    <div class="hide">
+                      <p>A bolt of lightning, unfortunately, you never know when or where it's ever gonna strike.
+                         Marty, you didn't fall asleep, did you? He's fine, and he's completely unaware that anything happened.
+                         As far as he's concerned the trip was instantaneous.
+                      </p>
+                    <div>
+                </li>
+                <li>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Lollipop Liquorice
+                  </h4>
+                    <div class="hide">
+                      <p>No, Marty, we've already agreed that having information about the future could be extremely dangerous.
+                         Even if your intentions are good, they could backfire drastically.
+                      </p>
+                    <div>
                 </li>
               </ul> <!-- end class "inner-ul" -->
             </div> <!-- end class "hide" -->
-          </li> <!-- end outer visible button "Danish souffle" -->
+          </li> <!-- end outer visible button "Danish Souffle" -->
+
 
           <!-- Jujubes bear claw topping -->
           <li>
@@ -169,13 +283,40 @@
               </p>
               <ul class="inner-ul">
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Faworki jelly pastry</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Faworki Jelly Pastry
+                  </h4>
+                  <div class="hide">
+                    <p>Say, you wanna see the signing of the declaration of independence, or witness the birth or Christ.
+                       Here's a red-letter date in the history of science, November 5, 1955.
+                    </p>
+                  <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Chocolate caramels</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Chocolate Caramels
+                  </h4>
+                    <div class="hide">
+                      <p>Say, you wanna see the signing of the declaration of independence, or witness the birth or Christ.
+                         Here's a red-letter date in the history of science, November 5, 1955.
+                      </p>
+                    <div>
                 </li>
                 <li>
-                  <h4><span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>Lollipop liquorice</h4>
+                  <h4>
+                    <span class="fa fa-arrow-circle-o-right" aria-hidden="true"></span>
+                    <span class="fa fa-arrow-circle-o-down hide-down-arrow" aria-hidden="true"></span>
+                    Lollipop Liquorice
+                  </h4>
+                    <div class="hide">
+                      <p>Say, you wanna see the signing of the declaration of independence, or witness the birth or Christ.
+                         Here's a red-letter date in the history of science, November 5, 1955.
+                      </p>
+                    <div>
                 </li>
               </ul> <!-- end class "inner-ul" -->
             </div> <!-- end class "hide" -->
